fix: button alignment

--- a/src/Button/Button.scss
+++ b/src/Button/Button.scss
@@ -14,6 +14,7 @@
   gap: 5px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .button--secondary {
   font-family: "inter", sans-serif;
