--- a/src/PoolCard/PoolCard.scss
+++ b/src/PoolCard/PoolCard.scss
@@ -64,7 +64,6 @@
   .pool--button {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: 10px;
     .button--secondary,
     .button--primary {
